changes made to controller tests